--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -79,7 +79,7 @@
 												<h:outputText for="COACES" value="Código de activo: "/>
 												<p:inputText id="COACES" value="#{GestorReferenciasCatastrales.sCOACES}" size="9" maxlength="9"/>
 
-												<p:commandButton value="Cargar Referencia" update="msgs, popup, COACES, NURCAT" actionListener="#{GestorReferenciasCatastrales.comprobarActivo}"/>
+												<p:commandButton value="Cargar Referencia disponible" update="msgs, popup, COACES, NURCAT" actionListener="#{GestorReferenciasCatastrales.comprobarActivo}"/>
 
 											</h:panelGrid>
 										</p:panel>
