--- a/WebContent/cargador.xhtml
+++ b/WebContent/cargador.xhtml
@@ -13,20 +13,24 @@
 		<h:form>
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="28%" header="Cargar Archivo">
-								<h:panelGrid columns="4" cellpadding="5">
-									<p:fieldset legend="Info">
-										<h:panelGrid columns="3" cellpadding="5">
-											<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button" />
-											<p:commandButton value="Ocultar" onclick="barraInfo.hide()" type="button" />
-											<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top">  
-												<p:messages id="msgs"/>
-											</p:notificationBar>  
+				<p:layoutUnit position="north" size="auto" header="Cargar Archivo">
+					<h:panelGrid columns="4" cellpadding="5">
+						<p:fieldset legend="Info">
+							<h:panelGrid columns="3" cellpadding="5">
 
-											<p:growl id="popup" />
-										</h:panelGrid>
-									</p:fieldset>
-								</h:panelGrid>
+								<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button" />
+
+								<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top" style="height: auto">
+									<h:panelGrid columns="2" cellpadding="5">
+										<p:messages id="msgs"/>
+										<p:commandButton value="Ocultar" onclick="barraInfo.hide()" type="button"/>
+									</h:panelGrid>
+								</p:notificationBar>
+
+								<p:growl id="popup" />
+							</h:panelGrid>
+						</p:fieldset>
+					</h:panelGrid>
 				</p:layoutUnit>
 
 				<p:layoutUnit position="west" size="20%" header="Menus">
@@ -37,7 +41,7 @@
 					<p:panel>
 						<h:panelGrid columns="2" cellpadding="5">
 						<p:fileUpload fileUploadListener="#{GestorCargas.handleFileUpload}" mode="advanced" dragDropSupport="true"  
-							update="popup, msgs" allowTypes="/(\.|\/)(txt)$/" /> 
+							update="popup, msgs, tabla" allowTypes="/(\.|\/)(txt)$/" /> 
 						<p:ajaxStatus style="width:16px;height:16px;" id="ajaxStatusPanel">  
 							<f:facet name="start">  
 								<h:graphicImage value="recursos/loadingBar.gif" />  
@@ -49,6 +53,28 @@
 						</p:ajaxStatus> 
 						</h:panelGrid>
 					</p:panel>
+					<p:panel>
+						<p:dataTable id="tabla" var="mensaje" value="#{GestorCargas.tablamensajes}" rowKey="#{mensaje.sArchivo}"  
+								selection="#{GestorActivos.activoseleccionado}" selectionMode="single"
+									paginator="true" paginatorPosition="bottom" rows="10" 
+									paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
+									rowsPerPageTemplate="10,15,20">  
+
+							<f:facet name="header">  
+								Resultado de la carga
+							</f:facet>
+
+							<p:column sortBy="#{mensaje.sArchivo}" headerText="Archivo">  
+							    #{mensaje.sArchivo}  
+							</p:column>  
+							
+							<p:column sortBy="#{mensaje.sResultado}" headerText="Resultado">  
+							    #{mensaje.sResultado}  
+							</p:column>  
+
+						</p:dataTable>
+					</p:panel>
+					
 				</p:layoutUnit>
 			</p:layout>
 		</h:form>
