Gestion de comunidades erroneas.

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -30,6 +30,8 @@
 									url="gestionactivoscomunidad.xhtml" icon="ui-icon-transferthick-e-w" />
 								<p:menuitem value="Movimientos"
 									url="movimientoscomunidades.xhtml" icon="ui-icon-document" />
+								<p:menuitem value="Errores"
+									url="errorescomunidad.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
 							
 							<p:submenu label="Cuotas" icon="ui-icon-calculator">
