--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -38,7 +38,9 @@
 								<p:menuitem value="Registrar"
 									url="registracuota.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
-									url="movimientoscuotas.xhtml" icon="ui-icon-document" />								
+									url="movimientoscuotas.xhtml" icon="ui-icon-document" />
+								<p:menuitem value="Errores"
+									url="errorescuota.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
 							
 							<p:submenu label="Referencias catastrales" icon="ui-icon-script">
@@ -46,6 +48,8 @@
 									url="registrareferencia.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
 									url="movimientosreferencias.xhtml" icon="ui-icon-document" />	
+								<p:menuitem value="Errores"
+									url="erroresferencia.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
 							<p:submenu label="Impuestos y tasas" icon="ui-icon-note">
 								<p:menuitem value="Registrar"
