--- a/WebContent/errorescuotas.xhtml
+++ b/WebContent/errorescuotas.xhtml
@@ -15,7 +15,7 @@
 		<h:form id="form" onkeypress="return event.keyCode != 13">
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="auto" header="Gestión de errores Cuota">
+				<p:layoutUnit position="north" size="auto" header="Gestión de errores en Cuotas">
 					<h:panelGrid columns="3" cellpadding="5">
 
 						<p:panel>
@@ -424,16 +424,16 @@
 								#{cuotae.COACES}  
 							</p:column>
 
-							<p:column sortBy="#{cuotae.COCLDO}" headerText="Documento">
-								#{cuotae.COCLDO}  
+							<p:column sortBy="#{cuotae.DCOCLDO}" headerText="Documento">
+								#{cuotae.DCOCLDO}  
 							</p:column>
 
 							<p:column sortBy="#{cuotae.NUDCOM}" headerText="Número">
 								#{cuotae.NUDCOM}  
 							</p:column>
 
-							<p:column sortBy="#{cuotae.COSBAC}" headerText="Concepto">
-								#{cuotae.COSBAC}  
+							<p:column sortBy="#{cuotae.DCOSBAC}" headerText="Concepto">
+								#{cuotae.DCOSBAC}  
 							</p:column>
 
 							<p:column sortBy="#{cuota.ERRORES}" headerText="Errores">
