--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -31,7 +31,7 @@
 								<p:menuitem value="Movimientos"
 									url="movimientoscomunidades.xhtml" icon="ui-icon-document" />
 								<p:menuitem value="Errores"
-									url="errorescomunidad.xhtml" icon="ui-icon-alert" />
+									url="errorescomunidades.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
 							
 							<p:submenu label="Cuotas" icon="ui-icon-calculator">
@@ -40,7 +40,7 @@
 								<p:menuitem value="Movimientos"
 									url="movimientoscuotas.xhtml" icon="ui-icon-document" />
 								<p:menuitem value="Errores"
-									url="errorescuota.xhtml" icon="ui-icon-alert" />
+									url="errorescuotas.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
 							
 							<p:submenu label="Referencias catastrales" icon="ui-icon-script">
@@ -49,13 +49,15 @@
 								<p:menuitem value="Movimientos"
 									url="movimientosreferencias.xhtml" icon="ui-icon-document" />	
 								<p:menuitem value="Errores"
-									url="erroresferencia.xhtml" icon="ui-icon-alert" />
+									url="erroresferencias.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
 							<p:submenu label="Impuestos y tasas" icon="ui-icon-note">
 								<p:menuitem value="Registrar"
 									url="registraimpuesto.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
 									url="movimientosimpuestos.xhtml" icon="ui-icon-document" />	
+								<p:menuitem value="Errores"
+									url="erroresimpuestos.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
 						</p:submenu>
 						<p:submenu label="Archivos">
