boton limpiar plantilla error arreglado. Modificacion de errores de gastos.

--- a/WebContent/errorescomunidades.xhtml
+++ b/WebContent/errorescomunidades.xhtml
@@ -334,7 +334,7 @@
 									<h:panelGrid columns="3" cellpadding="5">
 
 										<p:commandButton value="Buscar" update="popup, form:comunidadeserror" actionListener="#{GestorErroresComunidades.buscaComunidadesError}" oncomplete="dlgTablaComunidadesError.show()"/>
-										<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorErroresComunidades.limpiarPlantillaError}"/>
+										<p:commandButton value="Limpiar Plantilla" update="panelBuscarErrores" actionListener="#{GestorErroresComunidades.limpiarPlantillaError}"/>
 
 									</h:panelGrid>
 								</p:panel>
