--- a/WebContent/errorescuotas.xhtml
+++ b/WebContent/errorescuotas.xhtml
@@ -397,7 +397,7 @@
 									<h:panelGrid columns="2" cellpadding="5">
 
 										<p:commandButton value="Buscar" update="popup, form:cuotaserror" actionListener="#{GestorErroresCuotas.buscaCuotasError}" oncomplete="dlgTablaCuotasError.show()"/>	
-										<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorErroresCuotas.limpiarPlantillaError}"/>
+										<p:commandButton value="Limpiar Plantilla" update="panelBuscarErrores" actionListener="#{GestorErroresCuotas.limpiarPlantillaError}"/>
 
 									</h:panelGrid>
 								</p:panel>
