--- a/WebContent/erroresferencias.xhtml
+++ b/WebContent/erroresferencias.xhtml
@@ -325,7 +325,7 @@
 									<h:panelGrid columns="3" cellpadding="5">
 
 										<p:commandButton value="Buscar" update="popup, form:referenciaserror" actionListener="#{GestorErroresReferenciasCatastrales.buscaReferenciasError}" oncomplete="dlgTablaReferenciasError.show()"/>	
-										<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorErroresReferenciasCatastrales.limpiarPlantillaError}"/>
+										<p:commandButton value="Limpiar Plantilla" update="panelBuscarErrores" actionListener="#{GestorErroresReferenciasCatastrales.limpiarPlantillaError}"/>
 
 									</h:panelGrid>
 								</p:panel>
