--- a/WebContent/erroresimpuestos.xhtml
+++ b/WebContent/erroresimpuestos.xhtml
@@ -356,7 +356,7 @@
 									<h:panelGrid columns="3" cellpadding="5">
 
 										<p:commandButton value="Buscar" update="popup, form:impuestoserror" actionListener="#{GestorErroresImpuestosRecursos.buscaImpuestosError}" oncomplete="dlgTablaImpuestosError.show()"/>	
-										<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorErroresImpuestosRecursos.limpiarPlantillaError}"/>
+										<p:commandButton value="Limpiar Plantilla" update="panelBuscarErrores" actionListener="#{GestorErroresImpuestosRecursos.limpiarPlantillaError}"/>
 
 									</h:panelGrid>
 								</p:panel>
