--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -15,6 +15,8 @@
 								url="registragasto.xhtml" icon="ui-icon-arrowthick-1-e" />
 							<p:menuitem value="Movimientos"
 								url="movimientosgastos.xhtml" icon="ui-icon-document" />
+							<p:menuitem value="Pago por Conexión"
+								url="pagoconexion.xhtml" icon="ui-icon-signal-diag" />
 							<p:menuitem value="Errores"
 								url="erroresgastos.xhtml" icon="ui-icon-alert" />
 						</p:submenu>
