Optimizacion de registros de gastos (PK de indice entero) y modificado el pago por conexión.

--- a/WebContent/pagoconexion.xhtml
+++ b/WebContent/pagoconexion.xhtml
@@ -96,10 +96,10 @@
 												<p:inputText id="COENCX" value="#{GestorPagosConexion.sCOENCX}" size="4" maxlength="4"/>
 
 												<h:outputText value="Oficina de emisión: "/>
-												<p:inputText id="COOFCX" value="#{GestorPagosConexion.sCOOFCX}" size="4" maxlength="9"/>
+												<p:inputText id="COOFCX" value="#{GestorPagosConexion.sCOOFCX}" size="4" maxlength="4"/>
 
-												<h:outputText value="Numero: "/>
-												<p:inputText id="NUCONE" value="#{GestorPagosConexion.sNUCONE}" size="13" maxlength="9"/>
+												<h:outputText value="Número: "/>
+												<p:inputText id="NUCONE" value="#{GestorPagosConexion.sNUCONE}" size="13" maxlength="13"/>
 
 											</h:panelGrid>
 										</p:panel>
