--- a/WebContent/cargador.xhtml
+++ b/WebContent/cargador.xhtml
@@ -59,7 +59,7 @@
 						</h:panelGrid>
 					</p:panel>
 					<p:panel>
-						<p:dataTable id="tabla" var="mensaje" value="#{GestorCargas.tablamensajes}" rowKey="#{mensaje.sArchivo}"  
+						<p:dataTable id="tabla" var="mensaje" value="#{GestorCargas.tablamensajes}" rowKey="#{mensaje.sObjeto}"  
 									paginator="true" paginatorPosition="bottom" rows="10" 
 									paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
 									rowsPerPageTemplate="10,15,20">  
@@ -68,8 +68,8 @@
 								Resultado de la carga
 							</f:facet>
 
-							<p:column sortBy="#{mensaje.sArchivo}" headerText="Archivo">  
-							    #{mensaje.sArchivo}  
+							<p:column sortBy="#{mensaje.sObjeto}" headerText="Archivo">  
+							    #{mensaje.sObjeto}  
 							</p:column>  
 							
 							<p:column sortBy="#{mensaje.sResultado}" headerText="Resultado">  
