volcado de gastos

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -65,10 +65,16 @@
 							</p:submenu>
 						</p:submenu>
 						<p:submenu label="Archivos">
-							<p:menuitem value="Cargar"
-								url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
-							<p:menuitem value="Descargar" 
+							<p:menuitem value="Recepción"
+								url="recepcion.xhtml" icon="ui-icon-arrowthick-1-n" />
+							<p:menuitem value="Envios" 
 								url="envios.xhtml" icon="ui-icon-arrowthichk-1-s" />
+						</p:submenu>
+						<p:submenu label="Volcados">
+							<p:menuitem value="Cargar"
+								url="cargar.xhtml" icon="ui-icon-arrowthick-1-n" />
+							<p:menuitem value="Descargar" 
+								url="descargar.xhtml" icon="ui-icon-arrowthichk-1-s" />
 						</p:submenu>
 					</p:slideMenu>
 </html>
