--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -12,21 +12,44 @@
 	<h:body>
 		<h:form>
 			<p:layout fullPage="true">
-				<p:layoutUnit position="north" size="25%" header="Portal Provisiones">
-					<h:panelGrid columns="2" cellpadding="5">
-						<p:panel>
-							<h:outputText value="USUARIO "/>
-							<p:inputText id="USUARIO" value="#{GestorIndice.sUsuario}" disabled="true"/>
-						</p:panel>
+				<p:layoutUnit position="north" size="auto" header="Portal Provisiones">
+					<h:panelGrid columns="1" cellpadding="5">
+						<p:fieldset legend="Sesión" id="sesion">
+							<h:panelGrid columns="1" cellpadding="1">
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="1">
+										<h:outputText value="Usuario: "/>
+										<p:inputText id="USUARIO" value="#{GestorSesion.sUsuario}" size="10" disabled="true"/>
+									</h:panelGrid>
+								</p:panel>
+								<p:commandButton type="button" value="Salir" onclick="dlgConfirmaSalir.show()"/> 
+							</h:panelGrid>
+						</p:fieldset>
 					</h:panelGrid>
-				</p:layoutUnit>
-
-				<p:layoutUnit position="west" size="20%" header="Menus">
-					<ui:include src="menu.xhtml"/>
 				</p:layoutUnit>
 
 				<p:layoutUnit position="center">
 					<h:outputText value=" " />
+					<p:dialog header="Confirmación" widgetVar="dlgConfirmaSalir" resizable="false"> 
+						<h:panelGrid columns="1">
+							<p:panel>
+								<h:panelGrid columns="1">
+									<h:outputText value="¿Está seguro de cerrar esta sesión?" />
+									<h:outputText value="- Todos los datos no guardados se perderán." />
+								</h:panelGrid>
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="5">
+									<p:commandButton value="Si" icon="ui-icon-check" action="#{GestorSesion.cerrarSesion}" oncomplete="dlgConfirmaSalir.hide()"/>  
+									<p:commandButton value="No" type="button" icon="ui-icon-close" onclick="dlgConfirmaSalir.hide()"/>
+									</h:panelGrid>
+								</p:panel>
+							</p:panel>
+						</h:panelGrid>
+					</p:dialog>
+				</p:layoutUnit>
+
+				<p:layoutUnit position="west" size="20%" header="Menus">
+					<ui:include src="menu.xhtml"/>
 				</p:layoutUnit>
 
 			</p:layout>
